--- a/6-best_practices/code/integration-test/docker-compose.yml
+++ b/6-best_practices/code/integration-test/docker-compose.yml
@@ -6,11 +6,21 @@ services:
       - "8080:8080"
 
     environment:
-      - PREDICTIONS_STREAM_NAME=sales_predictions
-      - TEST_RUN=True 
+      - PREDICTIONS_STREAM_NAME=${PREDICTIONS_STREAM_NAME}
       - RUN_ID=Test123
-      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - TEST_RUN=False
+      - KINESIS_ENDPOINT_URL=http://kinesis:4566/
       - MODEL_LOCATION=/app/model
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     
     volumes:
       - "./model:/app/model"
+
+  kinesis:
+    image: localstack/localstack
+    ports:
+      - "4566:4566"
+    environment:
+      - SERVICES=kinesis
