--- a/6-best_practices/code/Pipfile
+++ b/6-best_practices/code/Pipfile
@@ -12,6 +12,9 @@ numpy = "==1.21.5"
 [dev-packages]
 pytest = "*"
 deepdiff = "*"
+pylint = "*"
+black = "*"
+isort = "*"
 
 [requires]
 python_version = "3.9"
